Release 0.0.6 (#453)
* feat: 종목 및 배당 일정 최신화 기능 cron 표현식 수정 (#428)

릴리즈 서버는 7시에 수행, 프로덕션은 8시에 수행

* [refactor] 종목 및 배당일정 초기화 코드 개선 (#429)

* feat: 접근 제한자 private 변경 및 트랜잭션 애노테이션 제거

* feat: usd 환율 생성 로직 추가

* style: 코드 정리

* style: 메서드 순서 정리

* feat: 관리자 및 매니저 정보 프로퍼티화

* feat: 관리자 및 매니저 프로퍼티 추가

* refactor: createMemberIfNotFound 메서드 코드 수정

* refactor: 알림 환경설정 초기화 메서드 분리

* refactor: createRoleIfNotFound 메서드명 변경

db에 저장하는 것이기 때문에 save가 더 적절하다고 생각함

* refactor: findOrCreateRole 메서드로 분리

* style: 코드 정리

* rename: SetUpDataLoader 클래스명 변경

* feat: SetupDataLoader 클래스로 분리

* refactor: supplierNotFoundRoleExpceiton 메서드로 분리

* refactor: createExchangeRateIfNotFount 메서드명 변경

* refactor: 스트림 형식으로 변경

* feat: 시크릿 정보 수정

- 역할 정보 추가

* feat: RoleProperties 추가

* feat: 역할별 getter 추가

* refactor: Role 리소스 생성 로직 스트림으로 변경

* refactor: getter 제거 및 클래스명 RoleProperty로 변경

* style: 코드 정리

* test: setupResources 테스트 추가

* test: setupResources 테스트에 멤버 검증문 추가

* test: Authentication 검증문 추가

* test: 검증문 추가

* style: 주석 추가

* test: 환율 검증문 추가

* teset: kisService 객체 모킹

* test: 종목 검증문 추가 및 종목 초기화 로직 추가

* feat: readDividendCsv 메서드 구현

* rename: stocks.csv, dividends.csv 파일을 test/resources로 이동

* feat: 배당금 초기화 추가

* feat: UserProperties 추가

* rename: properties 파일 이동

* feat: 시크릿 정보 변경

- 샘플 유저 추가

* docs: mysql script 제거

* feat: Stock.parse 정적 팩토리 메서드에 예외 캐치 추가

* feat: stocks.csv -> stocks.txt로 변경

* test: 테스트 문제 해결

* feat: parseCsvLine 구현

- Ltd가 포함된 종목은 쉼표를 포함하고 있기 때문에 원할한 쉼표 분할을 위해서 별도의 패턴을 구현함

* feat: Pattern 변경

* test: 테스트 실패 해결

* feat: 시크릿 정보 변경

- csv 파일로 변경

* [refactor] kisClient 리팩토링 (#432)

* feat: 예외 발생시 로깅

* feat: 예외 처리

* refatcotr: 불필요한 샘플 종목 생성 코드 제거

* feat: AbstractContainerBaseTest 추상화

* feat: AstractContainerBaseTest 추상 클래스로 변경

* feat: CheckedKisAccessToken 애노테이션 추가

- 해당 애노테이션을 통하여 한국투자증권 서버의 액세스 토큰의 만료를 확인합니다.

* test: fetchDividend 테스트 추가

