@@ -1,14 +1,13 @@
 package codesquad.fineants.domain.holding.domain.factory;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 import org.springframework.stereotype.Component;
 
 import codesquad.fineants.domain.holding.domain.dto.response.PortfolioHoldingItem;
 import codesquad.fineants.domain.holding.domain.dto.response.PortfolioHoldingRealTimeItem;
 import codesquad.fineants.domain.kis.repository.ClosingPriceRepository;
-import codesquad.fineants.domain.kis.repository.CurrentPriceRepository;
+import codesquad.fineants.domain.kis.repository.CurrentPriceRedisRepository;
 import codesquad.fineants.domain.portfolio.domain.entity.Portfolio;
 import lombok.RequiredArgsConstructor;
 
@@ -16,7 +15,7 @@ import lombok.RequiredArgsConstructor;
 @RequiredArgsConstructor
 public class PortfolioHoldingDetailFactory {
 
-	private final CurrentPriceRepository manager;
+	private final CurrentPriceRedisRepository manager;
 	private final ClosingPriceRepository closingPriceRepository;
 
 	public List<PortfolioHoldingItem> createPortfolioHoldingItems(Portfolio portfolio) {
@@ -28,7 +27,7 @@ public class PortfolioHoldingDetailFactory {
 					portfolioHolding.getLastDayClosingPrice(closingPriceRepository)
 				)
 			)
-			.collect(Collectors.toList());
+			.toList();
 	}
 
 	public List<PortfolioHoldingRealTimeItem> createPortfolioHoldingRealTimeItems(Portfolio portfolio) {
@@ -38,6 +37,6 @@ public class PortfolioHoldingDetailFactory {
 				portfolioHolding,
 				portfolioHolding.getLastDayClosingPrice(closingPriceRepository)
 			))
-			.collect(Collectors.toList());
+			.toList();
 	}
 }
