@@ -2,11 +2,10 @@ package codesquad.fineants.domain.stock_target_price.domain.dto.response;
 
 import java.time.LocalDateTime;
 import java.util.List;
-import java.util.stream.Collectors;
 
 import codesquad.fineants.domain.common.money.Money;
-import codesquad.fineants.domain.stock_target_price.domain.entity.StockTargetPrice;
 import codesquad.fineants.domain.kis.repository.ClosingPriceRepository;
+import codesquad.fineants.domain.stock_target_price.domain.entity.StockTargetPrice;
 import lombok.AccessLevel;
 import lombok.AllArgsConstructor;
 import lombok.Builder;
@@ -32,12 +31,12 @@ public class TargetPriceNotificationSearchItem {
 
 		List<TargetPriceItem> targetPrices = stockTargetPrice.getTargetPriceNotifications().stream()
 			.map(TargetPriceItem::from)
-			.collect(Collectors.toList());
+			.toList();
 
 		return TargetPriceNotificationSearchItem.builder()
 			.companyName(stockTargetPrice.getStock().getCompanyName())
 			.tickerSymbol(stockTargetPrice.getStock().getTickerSymbol())
-			.lastPrice(manager.getClosingPrice(stockTargetPrice.getStock().getTickerSymbol())
+			.lastPrice(manager.fetchPrice(stockTargetPrice.getStock().getTickerSymbol())
 				.orElse(Money.zero()))
 			.targetPrices(targetPrices)
 			.isActive(stockTargetPrice.getIsActive())
